# soksak-sidecar-workflow

./: .gitignore  Cargo.toml  INTERFACE.md  Makefile  README.ko.md  README.md  THIRD-PARTY-NOTICES
.github/workflows/: fs-probe.yml  release.yml  verify.yml
fixtures/: gen.pharmacy.doc.json
references/: draft-skill.md  plan-skill.md  research-skill.md  routing-skill.md
references/workflow/: SKILL.md  api-reference.md  patterns.md
release/: targets.json  unit.json
scripts/: archive.mjs  assemble-publish.mjs  build-artifact.mjs  build-release.mjs  fs-identity-probe.mjs  gate.mjs  github-release-policy.mjs  publish-release.mjs  release-context.mjs  release-contract.mjs  release-matrix.mjs  stage-release.mjs  validate-with-spec.mjs  verify-handshake.mjs
src/: author_doc.rs  consensus.rs  derive_directive.rs  directive_loop.rs  doc_exec.rs  doc_interp.rs  domain_lib.rs  draft_doc.rs  emit_host.rs  exec_one.rs  generate_skeleton.rs  host.rs  interface.rs  lang.rs  lib.rs  main.rs  mem_board.rs  mem_board_tests.rs  node_event.rs  paths.rs  prompt_assembly.rs  provider.rs  reconcile.rs  reconcile_tests.rs  spec_set.rs  spec_set_tests.rs  wf_service.rs
src/domains/: novel.json  travel.json  webservice.json  wedding.json
src/reconcile/: draft.rs
tests/: directive_loop_cli.rs  github_release_policy.test.mjs  handshake.rs  read-regular-file.test.mjs  release_contract.test.mjs  release_engine.test.mjs  repository_policy.test.mjs  serve_wire.rs  subcommands.rs
validation/: spec-validator.json
workflows/: draft.doc.json  research.doc.json
