[package]
name = "soksak-sidecar-workflow"
version = "0.0.1"
edition = "2021"
rust-version = "1.96"
publish = false
license = "MIT"
repository = "https://github.com/soksak-ai/soksak-sidecar-workflow"
description = "워크플로 골격 실행 런타임 — 발행(--emit)·실행(exec-one/exec-stage)·③파생. agent 는 claude -p 로 실행."

[[bin]]
name = "soksak-sidecar-workflow"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wait-timeout = "0.2.1"
soksak-spec-service = { git = "https://github.com/soksak-ai/soksak-spec.git", rev = "d7f54852754195527f125d1fc11362316157d19b", package = "soksak-spec-service" }
